# PubMed_Bm25

./: .env.example  .gitignore  README.md  app.py  config.py  console_search.py  dashboard_api.py  main.py  progress_tracker.py  pyproject.toml  requirements.txt  test_error_sentinel.py  test_pipeline.py  test_runner.py  testing_dashboard.py
agents/: __init__.py  error_sentinel.py  hygiene_agent.py  hygiene_checks.py  latency_optimizer.py  run_parallel.py
data/sample_guidelines/: diabetes_guidelines.txt
genomics/: __init__.py  blast_search.py  variant_annotator.py  variant_parser.py
nlp_dashboard/: index.html  package-lock.json  package.json  tailwind.config.cjs
nlp_dashboard/src/: App.jsx  index.css
pipeline/: __init__.py  llm_provider.py  orchestrator.py  response_parser.py  stage1_diagnostician.py  stage2_critic.py  stage3_safety.py  token_optimizer.py
prompts/: critic.txt  diagnostician.txt  safety_validator.txt
retrieval/: __init__.py  hybrid_search.py  pubmed_retriever.py  vector_store.py
tests/: test_agents.py  test_components.py  test_config.py  test_genomics.py  test_pipeline.py  test_retrieval.py
ui/: __init__.py  components.py  patient_form.py  results_display.py  styles.py
